--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@radix-ui/react-tooltip": "^1.2.6",
     "@tabler/icons-react": "^3.33.0",
     "@tailwindcss/cli": "^4.1.7",
+    "@uiw/react-markdown-preview": "^5.1.4",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
@@ -52,10 +53,15 @@
     "react-day-picker": "^8.10.1",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.56.4",
+    "react-markdown": "^10.1.0",
     "react-resizable-panels": "^3.0.2",
+    "react-syntax-highlighter": "^15.6.1",
     "recharts": "^2.15.3",
+    "rehype-raw": "^7.0.0",
+    "remark-gfm": "^4.0.1",
     "sonner": "^2.0.3",
     "tailwind-merge": "^3.3.0",
+    "uuid": "^11.1.0",
     "vaul": "^1.1.2",
     "zod": "^3.24.4"
   },
